--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- INDEX _29Jul2018_  -->
-<!-- WHAT'S NEW: mesenger chat/ hide some icons / menubar/  fix some code-->
+<!-- INDEX _3Aug18_  -->
+<!-- WHAT'S NEW: mesenger chat/  menubar/  fix some code-->
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -65,7 +65,7 @@ body, html {
 	<div class="w3-bar w3-gray w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
 <a href="http://a-papaspyrou.tk" class="w3-bar-item w3-button w3-wide">
 <img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:27px;" class="w3-left w3-hover-opacity"> &nbsp; 
-<b> Papaspyrou</b> Alexandros</a>
+<b> Papaspyrou</b><span class="w3-hide-small"> Alexandros</span></a>
 
 <!-- Right-sided navbar links -->
 <!-- <div class="w3-right w3-hide-small">
@@ -79,11 +79,11 @@ body, html {
 <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()"><i class="fa fa-bars"></i></a></div></div>
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card-2 w3-animate-left w3-hide-large w3-hide-medium" style="display:none" id="mySidebar">
-<a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red" >Close ×</a> <!--
-	<a href="https://alexandroshub.github.io/projects.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
-	<a href="https://alexandroshub.github.io/me.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
-	<a href="https://alexandroshub.github.io/map.html" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
-	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a> 
+<a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red" >Close ×</a> 
+	<a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-send-o"></i>&nbsp;  Portfolio</a>
+	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
+	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-commenting-o"></i>  &nbsp; Blog</a> 
+    	<a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-commenting-o"></i>  &nbsp; Links</a> 
 	<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
 <hr>
     &nbsp; <a href="https://getpocket.com/@27bdfp78TaK97g4e6dA987eA2dgaT938154I38G999WdrUw2a6c6ei72S21olQ68">
@@ -94,8 +94,8 @@ body, html {
     <i class="fa fa-twitter w3-hover-opacity" style="font-size:14px;color:white"></i></a>
     	&nbsp; <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
     <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
-  	&nbsp; <a href=" https://www.reddit.com/user/alexispapy">
-    <i class="fa fa-reddit-alien w3-hover-opacity" style="font-size:14px;color:white"></i></a>  -->
+   <center> <img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:180px;" alt="Signature" align="bottom"></center>
+  	<!--  -->
 </nav>
 <script>// Toggle between showing and hiding the sidebar when clicking the menu icon
 var mySidebar = document.getElementById("mySidebar");
@@ -116,20 +116,13 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <p><a class="w3-button w3-green w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off" onclick="on()"><i class="fa fa-android"></i> NEW APP</a></p>
     
 <span class="w3-tag w3-blue w3-hide-small"><a href="https://alexandroshub.github.io/about" style="text-decoration: none" title="About my Website"><i class="fa fa-info-circle"></i></a></span>  
-
 <!-- <span class="w3-tag w3-red w3-margin-bottom"><a href="https://alexandroshub.github.io/support.html" style="text-decoration: none"><i class="fa fa-support"></i></a></span>
-
 <span class="w3-tag w3-green w3-margin-bottom"><a style="text-decoration: none" onclick="on()"><i class="fa fa-android"></i></a></span> -->
-
 <span class="w3-tag w3-orange w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none"title="Check out my Blog"><i class="fa fa-rss"></i></a></span> 
-
 <span class="w3-tag w3-black  w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none" title="Check out my CV"><i class="fa fa-user-circle-o"></i></a></span> 
-
 <span class="w3-tag w3-white w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none" title="Check out my portfolio"><i class="fa fa-folder-open-o"></i></a></span>
-
 <span class="w3-tag w3-purple w3-margin-bottom"><a href="https://alexandroshub.github.io/links.html" style="text-decoration: none" title="Check out more Links"><i class="fa fa-external-link"></i></a></span> 
-
-  </div> 
+</div> 
   
   <span class="w3-hide-small">
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
