--- a/links.html
+++ b/links.html
@@ -1,4 +1,5 @@
-<!-- LINKS_ 26Jun2018  -->
+
+<!-- LINKS_ 4Aug18  -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -16,16 +17,96 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>body { background-color: #f1f1f1; font-family: Arial;}</style>
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+body, html { height: 100%; line-height: 1.8; }
+.bgimg { background-position: center; background-size: cover; min-height: 75%; background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg"); }
 
+.w3-bar .w3-button {
+    padding: 16px;
+}
+</style>
 <body>
-<!-- ================================================================ -->
-<div class="w3-bar w3-left-align w3-large">
-<a class="w3-bar-item w3-light-grey"  href="https://alexandroshub.github.io/index"><img src= "https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:35px;"></a> 
-<a class="w3-bar-item  w3-black w3-padding-large"><b>Links</b></a>   
-</div><!-- ================================================================ -->
+<body>
+<!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="1610585155641169"
+  theme_color="#A9A9A9"
+  logged_in_greeting="Hi! How can i help you?"
+  logged_out_greeting="Hi! How can i help you?">
+</div>
 
-<div class="main"><!-- ================================================================ -->
+<!-- ======================= -->
+<!--  ////////////////////////// Navbar  ////////////////////////// -->
+<div class="w3-top">
+	<div class="w3-bar w3-gray w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
+<a href="https://alexandroshub.github.io" class="w3-bar-item w3-button w3-wide">
+<img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:27px;" class="w3-left w3-hover-opacity"> &nbsp; 
+<b> Papaspyrou</b><span class="w3-hide-small"> Alexandros</span></a>
+
+<!-- Right-sided navbar links -->
+<!-- <div class="w3-right w3-hide-small">
+	<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
+	<a href="https://alexandroshub.github.io/me.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
+	<a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
+	<a href="https://robodayblog.wordpress.com/" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a>
+	<a href="https://m.me/papaspyrou.alexandros"  class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i></a> 
+</div> -->
+<!-- Hide right-floated links on small screens and replace them with a menu icon -->
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right " onclick="w3_open()"><i class="fa fa-bars"></i></a></div></div>
+<!-- Sidebar on small screens when clicking the menu icon -->
+<nav class="w3-sidebar w3-bar-block w3-black w3-card-2 w3-animate-left " style="display:none" id="mySidebar">
+<a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red" >Close ×</a> 
+	<a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-send-o"></i>&nbsp;  Portfolio</a>
+	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
+	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-commenting-o"></i>  &nbsp; Blog</a> 
+    	<a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-commenting-o"></i>  &nbsp; Links</a> 
+	<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
+<hr>
+    &nbsp; <a href="https://getpocket.com/@27bdfp78TaK97g4e6dA987eA2dgaT938154I38G999WdrUw2a6c6ei72S21olQ68">
+    <i class="fa fa-get-pocket w3-hover-opacity" style="font-size:14px;color:white"></i></a> &nbsp; | 
+    	&nbsp; <a href="https://www.facebook.com/papaspyrou.a">
+    <i class="fa fa-facebook-official w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+    	&nbsp; <a href=" https://twitter.com/A_Papaspyrou ">
+    <i class="fa fa-twitter w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+    	&nbsp; <a href="https://gr.linkedin.com/in/alexandrospapaspyrou">
+    <i class="fa fa-linkedin w3-hover-opacity" style="font-size:14px;color:white"></i></a>
+   <center> <img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:180px;" alt="Signature" align="bottom"></center>
+  	<!--  -->
+</nav>
+<script>// Toggle between showing and hiding the sidebar when clicking the menu icon
+var mySidebar = document.getElementById("mySidebar");
+function w3_open() { if (mySidebar.style.display === 'block') 
+{mySidebar.style.display = 'none';} else {mySidebar.style.display = 'block';}
+}// Close the sidebar with the close button
+function w3_close() {mySidebar.style.display = "none";} </script>
+<!--  ////////////////////////// Navbar  ////////////////////////// -->
+<!-- ======================= -->
+
+<header class="w3-display-container w3-content w3-wide  w3-grayscale-min" style="max-width:1600px;min-width:75%" id="home">
+
+<img class="w3-image" src="https://78.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg" alt="photo" width="1600" height="800">
+
+<div class="w3-display-middle w3-center">
+<span class="w3-text-white w3-hide-small" style="font-size:130px">#Links</span>
+<span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">#Links</span></div>
+
+<div class="w3-display-bottomleft w3-padding-large w3-opacity">
+<span class="w3-tag">By: Papaspyrou Alexandros</span></div>
+</header>
+
+<!-- Add a background color and large text to the whole page -->
+<div class="w3-sand w3-grayscale w3-large">
 
 <br><span class="w3-tag w3-black">EVENTS</span><span class="w3-tag w3-blue"><a href=" https://www.e-businessworld.gr ">e-Business & Social Media World 2018</a></span><br>  
 		<a href="http://www.sev.org.gr">sev</a> | 
@@ -43,7 +124,9 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
         <a href="https://www.sap.com/greece/index.html">sap</a> | 
         <a href="https://youpoweredhub.csod.com/client/youpoweredhub/default.aspx">youpoweredhub</a> | 
 
-<br><span class="w3-tag w3-black">links</span><br> 
+<br><span class="w3-tag w3-red">MAKE</span><br> 
+        <a href="http://makezine.com/">makezine</a>|
+        <a href="https://www.adafruit.com/">adafruit</a>|
 		<a href="https://www.raspberrypi.org/">raspberrypi</a> | 
 		<a href="https://www.arduino.cc/">arduino</a> | 
 		<a href="https://www.sparkfun.com/">sparkfun</a> | 
@@ -110,6 +193,7 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
         <a href="https://unboxholics.com">Unboxholics</a>  |  
         <a href="http://lifehacker.com/">lifehacker</a>| 
         <a href="http://www.pcsteps.gr/">pcsteps</a> | 
+        <a href="https://www.adslgr.com">adslgr</a> | 
                 
 <br><span class="w3-tag w3-black">eBOOKS</span><br>
         <a href="https://free-ebooks.gr/">ebooks</a>| 
@@ -140,22 +224,15 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
        	<a href="https://kickass.unblocked.la/">kickass</a>  |   
         <a href="https://thepiratebay.vg/">tpb</a>  |     
   
-<br><span class="w3-tag w3-black">MAKE</span><br> 
-        <a href="http://makezine.com/">makezine</a>|
-        <a href="https://www.adafruit.com/">adafruit</a>|
 
 <br><span class="w3-tag w3-black">MATH</span><br> 
         <a href="http://integrals.wolfram.com/index.jsp">Olokliromata</a>| 
         <a href="http://m.wolframalpha.com/input/?i=derivative+of">Paragogoi</a>|
         <a href="http://www.numerics.info/calculator">Calculator</a>| 
 
-<br><span class="w3-tag w3-black">WEB</span><br>
-        <a href="https://www.webnode.gr/">webnode</a>| 
-        <a href="https://www.yola.com">Yola</a>| 
-        <a href="https://www.wix.com">Wix</a>| 
-    	<a href="http://www.weebly.com">Weebly</a>| 
+		
   
-<br><span class="w3-tag w3-black">PUAS</span><br> 
+<br><span class="w3-tag w3-green">PUAS</span><br> 
 		<a href="http://auto.teipir.gr/">auto</a>  |  
 		<a href="http://lib.puas.gr/">lib</a>  |  
 		<a href="http://www.teipir.gr/mke/">mke</a>  |   
@@ -168,6 +245,11 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 		<a href="https://el.libreoffice.org/">libreoffice</a>  |  
 		<a href="https://wiki.gnome.org/Apps/Evince">Evince</a>  |  
 		<a href="https://www.wps.com">wps</a>  |  
+        <span class="w3-tag w3-gray">WEB</span>
+        <a href="https://www.webnode.gr/">webnode</a>| 
+        <a href="https://www.yola.com">Yola</a>| 
+        <a href="https://www.wix.com">Wix</a>| 
+    	<a href="http://www.weebly.com">Weebly</a>| 
 
 <br><span class="w3-tag w3-black">CINEMA</span><br>
 		<a href="http://greekdocumentaries2.blogspot.gr/">greekdocumentaries</a>  |  
@@ -188,5 +270,11 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 
 <!-- =============================================== -->   
 </div>
+
+
+<!--Footer Section ////////////////////////////////////////////////////////// -->
+<div class="w3-center w3-black w3-padding-16"><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
+<!-- ////////////////////////////////////////////////////////// -->
+
 </body>
 </html>
