--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- INDEX _3Aug18_  -->
-<!-- WHAT'S NEW: mesenger chat/  menubar/  fix some code-->
+<!-- INDEX _4Aug18_  -->
+<!-- WHAT'S NEW: mesenger chat / fix menubar -->
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -58,23 +58,19 @@ body, html {
 <a href="https://snappy.appypie.com/index/app-download/appId/9a986a9e031f">
 <img src="https://d2wuvg8krwnvon.cloudfront.net/appqrcode/mobile_9a986a9e031f.png" width="50%" height="50%"></a><p>or click anywhere to close this window</p> </center></div></div> <script>function on() {document.getElementById("overlay").style.display = "block";} function off() {document.getElementById("overlay").style.display = "none";}</script>
 <!--  ////////////////////////// QR  ////////////////////////// -->
-
-
 <!--  ////////////////////////// Navbar  ////////////////////////// -->
 <div class="w3-top">
 	<div class="w3-bar w3-gray w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
-<a href="http://a-papaspyrou.tk" class="w3-bar-item w3-button w3-wide">
+<a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-wide">
 <img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:27px;" class="w3-left w3-hover-opacity"> &nbsp; 
 <b> Papaspyrou</b><span class="w3-hide-small"> Alexandros</span></a>
 
 <!-- Right-sided navbar links -->
-<!-- <div class="w3-right w3-hide-small">
-	<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
-	<a href="https://alexandroshub.github.io/me.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
-	<a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
-	<a href="https://robodayblog.wordpress.com/" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a>
-	<a href="https://m.me/papaspyrou.alexandros"  class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i></a> 
-</div> -->
+ <div class="w3-right w3-hide-small">
+<a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-orange w3-grayscale-min" title="Check out my Portfolio"><i class="fa fa-folder-open-o"></i></a>
+<a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-black w3-grayscale-min" title="Check out my CV"><i class="fa fa-user-circle-o"></i></a> 
+<a href="https://alexandroshub.github.io/links.html" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-purple w3-grayscale-min" title="Check out more links"><i class="fa fa-external-link"></i></a>
+</div>
 <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()"><i class="fa fa-bars"></i></a></div></div>
 <!-- Sidebar on small screens when clicking the menu icon -->
@@ -104,7 +100,6 @@ function w3_open() { if (mySidebar.style.display === 'block')
 }// Close the sidebar with the close button
 function w3_close() {mySidebar.style.display = "none";} </script>
 <!--  ////////////////////////// Navbar  ////////////////////////// -->
-
 <!--  ////////////////////////// Header with full-height image ////////////////////////// -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
@@ -135,9 +130,7 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <!-- Signature --><img src= "https://78.media.tumblr.com/e3d4fac4931e6e1df6b3b85d53dae92b/tumblr_p0sxo3UYRB1si59zfo1_1280.png" style="width:270px;" alt="Signature" align="bottom">
 </div></span>
 </header>
-<!--////////////////////////// /header ////////////////////////// -->
-<!-- ////////////////////////// Footer ////////////////////////// -->
-
+<!--/////////////// /header /////////////// Footer /////////////// -->
 <!-- 
 <style>
 .accordion {    background-color: #eee;    color: #444;  cursor: pointer;   padding: 18px;    width: 100%;   border: none;   text-align: left;    outline: none;   font-size: 15px;   transition: 0.4s; }
