--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!-- INDEX _4Aug18_  -->
-<!-- WHAT'S NEW: mesenger chat / fix menubar -->
+<!-- INDEX _15Aug18_ WHAT'S NEW: xx -->
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -70,6 +69,7 @@ body, html {
 <a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-orange w3-grayscale-min" title="Check out my Portfolio"><i class="fa fa-folder-open-o"></i></a>
 <a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-black w3-grayscale-min" title="Check out my CV"><i class="fa fa-user-circle-o"></i></a> 
 <a href="https://alexandroshub.github.io/links.html" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-purple w3-grayscale-min" title="Check out more links"><i class="fa fa-external-link"></i></a>
+<a href="https://robodayblog.wordpress.com" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-green w3-grayscale-min" title="Check out my Blog"><i class="fa fa-rss"></i></a>
 </div>
 <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()"><i class="fa fa-bars"></i></a></div></div>
@@ -109,18 +109,17 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 <span class="w3-large">Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία..</span>
 
 <p><a class="w3-button w3-green w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off" onclick="on()"><i class="fa fa-android"></i> NEW APP</a></p>
-    
-<span class="w3-tag w3-blue w3-hide-small"><a href="https://alexandroshub.github.io/about" style="text-decoration: none" title="About my Website"><i class="fa fa-info-circle"></i></a></span>  
-<!-- <span class="w3-tag w3-red w3-margin-bottom"><a href="https://alexandroshub.github.io/support.html" style="text-decoration: none"><i class="fa fa-support"></i></a></span>
-<span class="w3-tag w3-green w3-margin-bottom"><a style="text-decoration: none" onclick="on()"><i class="fa fa-android"></i></a></span> -->
-<span class="w3-tag w3-orange w3-margin-bottom"><a href="https://robodayblog.wordpress.com" style="text-decoration: none"title="Check out my Blog"><i class="fa fa-rss"></i></a></span> 
-<span class="w3-tag w3-black  w3-margin-bottom"><a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none" title="Check out my CV"><i class="fa fa-user-circle-o"></i></a></span> 
-<span class="w3-tag w3-white w3-margin-bottom"><a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none" title="Check out my portfolio"><i class="fa fa-folder-open-o"></i></a></span>
-<span class="w3-tag w3-purple w3-margin-bottom"><a href="https://alexandroshub.github.io/links.html" style="text-decoration: none" title="Check out more Links"><i class="fa fa-external-link"></i></a></span> 
 </div> 
   
   <span class="w3-hide-small">
+  
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+  
+<!-- support --><a href=" https://alexandroshub.github.io/support.html " title="support"><i class="fa fa-support"></i></a> 
+<!-- android --><a style="text-decoration: none" onclick="on()"title="android"><i class="fa fa-android"></i></a> 
+  
+  
+<!-- About --><a href=" https://alexandroshub.github.io/about " title="About"><i class="fa fa-info-circle"></i></a> | 
 <!-- twitter --><a href=" https://twitter.com/A_Papaspyrou" title="twitter"><i class="fa fa-twitter"></i></a>
 <!-- facebook -->
 <a href="https://www.facebook.com/papaspyrou.a" title="facebook"><i class="fa fa-facebook-f"></i></a>
