--- a/cv.html
+++ b/cv.html
@@ -1,4 +1,4 @@
-<!-- CV _24Jul2018_  -->
+<!-- CV _1Sep2018_  -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -20,6 +20,7 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
+#more {display: none;}
 </style>
 <body class="w3-theme-l5">
 <!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
@@ -68,8 +69,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 <p><a href="https://alexandroshub.github.io/portfolio.html"  style="text-decoration: none" title="Portfolio"><button class="w3-button w3-block w3-theme-l4"><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-black"></i>Portfolio</button></a></p>
 
 
-<p><a href="https://alexandroshub.github.io/soon.html"  style="text-decoration: none" title="Timeline"><button class="w3-button w3-block w3-theme-l4"><i class="fa fa-clock-o fa-fw w3-margin-right w3-large w3-text-black"></i>Timeline</button></a></p>
-                                
 <div class="w3-row w3-opacity">
 
 <div class="w3-third"><a class="w3-button w3-block w3-green w3-section" title="Call Me" href="tel:+306949452023"> <i class="fa fa-phone"></i></a></div>
@@ -162,8 +161,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
     <span class="w3-tag w3-small w3-theme-d5"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10/2017</span>
      <span class="w3-tag w3-small w3-theme-d2">--</span>
 	<span class="w3-tag w3-small w3-theme-l3"><i class="fa fa-bullhorn fa-fw w3-margin-right w3-large "></i><a href="" style="text-decoration:none;">είπαν</a></span>
-<p>Διαχείριση σε περισσότερα απο 40 τεχνικά ζητήματα την μέρα, με FTF στα περισσότερα απο αυτά. Σε αυτή τη θέση είμαι υπεύθυνος για διαχείριση τεχνικών προβλημάτων πελατών σταθερής τηλεφωνίας, IPTV και internet, αλλά και ενημέρωση για εκκρεμότητες ανοιχτών υποθέσεων σε διαδικασία επίλυσης.
-Στη θέση αυτή έχω την ευκαιρία να εξελίξω τις τεχνικές μου γνώσεις σταθερής τηλεφωνίας και παραμετροποίησης εξοπλισμών internet, να αποκτήσω εμπειρία και εξοικείωση σε τηλεφωνική εξυπηρέτηση, επικοινωνία και διαπροσωπικές σχέσεις.</p>
+<p>Διαχείριση σε περισσότερα απο 40 τεχνικά ζητήματα την μέρα, με FTF στα περισσότερα απο αυτά. Σε αυτή <span id="dots">...</span><span id="more"> τη θέση είμαι υπεύθυνος για διαχείριση τεχνικών προβλημάτων πελατών σταθερής τηλεφωνίας, IPTV και internet, αλλά και ενημέρωση για εκκρεμότητες ανοιχτών υποθέσεων σε διαδικασία επίλυσης.
+Στη θέση αυτή έχω την ευκαιρία να εξελίξω τις τεχνικές μου γνώσεις σταθερής τηλεφωνίας και παραμετροποίησης εξοπλισμών internet, να αποκτήσω εμπειρία και εξοικείωση σε τηλεφωνική εξυπηρέτηση, επικοινωνία και διαπροσωπικές σχέσεις.</span></p>
+<span class="w3-tag w3-small w3-theme-d2" onclick="ReadMore()" id="myBtn">
+Read more</span>
 <hr class="w3-clear"><!-- --------------------- -->
 <h5 class="w3-opacity"><b> THE CUBE | </b> Junior Embedded Developer</h5>
 <span class="w3-tag w3-small w3-theme-d5"><i class="fa fa-calendar fa-fw w3-margin-right"></i>5-8/2017</span>
@@ -245,7 +246,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
         <span onclick="this.parentElement.style.display='none'" class="w3-button w3-theme-l3 w3-display-topright">
         <i class="fa fa-remove"></i>
         </span>
-        <p><strong><i class="fa fa fa-bullhorn fa-fw w3-margin-right w3-text-black"></i>ADDS</strong></p>
+        <p><strong><i class="fa fa fa-bullhorn fa-fw w3-margin-right w3-text-black"></i>x</strong></p>
    
 <p class="w3-small"><b> x </b></p>   
       </div>    
@@ -297,7 +298,28 @@ function myFunction(id) {
         x.previousElementSibling.className.replace(" w3-theme-d1", "");
     }
 }
+
+// ReadMore
+
+function ReadMore() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more");
+  var btnText = document.getElementById("myBtn");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
 </script>
+
+
+
 
 </body>
 </html> 
