--- a/links.html
+++ b/links.html
@@ -1,5 +1,4 @@
-
-<!-- LINKS_ 1Sep18  -->
+<!-- LINKS_ 2Sep18  -->
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -141,7 +140,10 @@ function w3_close() {mySidebar.style.display = "none";} </script>
         <a href="http://www.wikihow.com/Main-Page">wikihow</a>  | 
         <a href="https://www.dummies.com/">dummies</a>  | 
     	<a href="http://www.instructables.com/">instructables</a>
-    <br><span class="w3-red">IoT</span>
+    <br><span class="w3-red">Code</span>
+        <a href="https://www.w3schools.com">w3schools</a>|
+        
+	<br><span class="w3-red">IoT</span>
         <a href="http://electronicsforu.com/">electronicsforu</a>| 
         <a href="http://electronicsofthings.com/">electronicsofthings</a>| 
         <a href="http://www.securitymanager.gr/newsite/index.php">securitymanager</a>| 
@@ -169,6 +171,7 @@ function w3_close() {mySidebar.style.display = "none";} </script>
         <a href="http://www.iefimerida.gr/τεχνολογία">iefimerida</a>  |
         <a href="http://www.in.gr/tech/">in</a>  |
   	<br><span class="w3-red"> BLOGS </span>
+		<a href="http://www.infocom.gr/"> infocom</a>  | 
         <a href="http://www.insomnia.gr/"> Insomnia</a>  |  
         <a href="https://unboxholics.com">Unboxholics</a>  |  
         <a href="http://lifehacker.com/">lifehacker</a>| 
@@ -235,6 +238,9 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 		<a href="http://www.openoffice.org/el/">openoffice</a>  |  
 		<a href="https://el.libreoffice.org/">libreoffice</a>  |  
 		<a href="https://wiki.gnome.org/Apps/Evince">Evince</a>  |  
+        <a href="https://www.foxitsoftware.com/pdf-reader/">foxitsoftware</a>  |  
+        <a href="https://www.sublimetext.com/">sublimetext</a>  |  
+		<a href="https://notepad-plus-plus.org/download/">notepad++</a>  |  
 		<a href="https://www.wps.com">wps</a>  |  
     <br><span class="w3-red">WEB</span>
         <a href="https://www.webnode.gr/">webnode</a>| 
@@ -282,6 +288,7 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 		<a href="https://oipeirates.se/">oipeirates</a>  |  
 		<a href="http://gamatotv.me/">gamatotv</a>  | 
     <br><span class="w3-red">eBOOKS</span>
+        <a href="https://repository.kallipos.gr/">kallipos</a>| 
 		<a href="https://free-ebooks.gr/">ebooks</a>| 
         <a href="http://www.openbook.gr/">openbook</a>| 
         <a href="http://ebooks.edu.gr/new/">edu</a>| 
