--- a/links.html
+++ b/links.html
@@ -1,4 +1,4 @@
-<!-- LINKS_ 2Sep18  -->
+
 
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -18,16 +18,25 @@ Handcrafted With ❤ By: Alexandros Papaspyrou
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
-body, html { height: 100%; line-height: 1.8; }
-.bgimg { background-position: center; background-size: cover; min-height: 75%; background-image: url("https://c1.staticflickr.com/4/3676/32780334312_14c9b2df93_o.jpg"); }
-
+body, html {
+    height: 100%;
+    line-height: 1.8;
+}
 .w3-bar .w3-button {
     padding: 16px;
 }
+.bgimg {
+    background-position: center;
+    background-size: cover;
+    background-image: url("https://78.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg");
+    min-height: 75%;
+}
+.menu {
+    display: none;
+}
 </style>
 <body>
-<body>
-<!-- Load Facebook SDK for JavaScript -->
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -36,38 +45,38 @@ body, html { height: 100%; line-height: 1.8; }
   js.src = 'https://connect.facebook.net/el_GR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<!-- Your customer chat code -->
 <div class="fb-customerchat"
   attribution=setup_tool
   page_id="1610585155641169"
   theme_color="#A9A9A9"
   logged_in_greeting="Hi! How can i help you?"
   logged_out_greeting="Hi! How can i help you?">
-</div><!-- ======================= -->
+</div>
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->    
+
 <!--  ////////////////////////// Navbar  ////////////////////////// -->
 <div class="w3-top">
 	<div class="w3-bar w3-gray w3-card-2 w3-opacity-min w3-hover-opacity-off" id="myNavbar">
-<a href="https://alexandroshub.github.io" class="w3-bar-item w3-button w3-wide">
+<a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-wide">
 <img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:27px;" class="w3-left w3-hover-opacity"> &nbsp; 
 <b> Papaspyrou</b><span class="w3-hide-small"> Alexandros</span></a>
 
 <!-- Right-sided navbar links -->
-<!-- <div class="w3-right w3-hide-small">
-	<a href="https://alexandroshub.github.io/projects.html" class="w3-bar-item w3-button"><i class="fa fa-send-o"></i> Creations</a>
-	<a href="https://alexandroshub.github.io/me.html" class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> Me </a> 
-	<a href="https://alexandroshub.github.io/map.html" class="w3-bar-item w3-button"><i class="fa fa-map-o"></i> Map</a>
-	<a href="https://robodayblog.wordpress.com/" target="_blank" class="w3-bar-item w3-button"><i class="fa fa-commenting-o"></i> Thoughts</a>
-	<a href="https://m.me/papaspyrou.alexandros"  class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i></a> 
-</div> -->
+ <div class="w3-right w3-hide-small">
+<a href="https://alexandroshub.github.io/portfolio.html" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-orange w3-grayscale-min" title="Check out my Portfolio"><i class="fa fa-folder-open-o"></i></a>
+<a href="https://alexandroshub.github.io/cv.html" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-black w3-grayscale-min" title="Check out my CV"><i class="fa fa-user-circle-o"></i></a> 
+<a href="https://alexandroshub.github.io/links.html" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-purple w3-grayscale-min" title="Check out more links"><i class="fa fa-external-link"></i></a>
+<a href="https://robodayblog.wordpress.com" style="text-decoration: none" class="w3-bar-item w3-button w3-hover-green w3-grayscale-min" title="Check out my Blog"><i class="fa fa-rss"></i></a>
+</div>
 <!-- Hide right-floated links on small screens and replace them with a menu icon -->
-<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right " onclick="w3_open()"><i class="fa fa-bars"></i></a></div></div>
+<a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()"><i class="fa fa-bars"></i></a></div></div>
 <!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="w3-sidebar w3-bar-block w3-black w3-card-2 w3-animate-left " style="display:none" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-black w3-card-2 w3-animate-left w3-hide-large w3-hide-medium" style="display:none" id="mySidebar">
 <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red" >Close ×</a> 
 	<a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-send-o"></i>&nbsp;  Portfolio</a>
 	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
 	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-commenting-o"></i>  &nbsp; Blog</a> 
-    	<a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-commenting-o"></i>  &nbsp; Links</a> 
+    	<a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-external-link"></i>  &nbsp; Links</a> 
 	<a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
 <hr>
     &nbsp; <a href="https://getpocket.com/@27bdfp78TaK97g4e6dA987eA2dgaT938154I38G999WdrUw2a6c6ei72S21olQ68">
@@ -88,23 +97,38 @@ function w3_open() { if (mySidebar.style.display === 'block')
 }// Close the sidebar with the close button
 function w3_close() {mySidebar.style.display = "none";} </script>
 <!--  ////////////////////////// Navbar  ////////////////////////// -->
-<!-- ======================= -->
 
-<header class="w3-display-container w3-content w3-wide  w3-grayscale-min" style="max-width:1600px;min-width:75%" id="home">
+<!-- Header with image -->
+<header class="bgimg w3-display-container w3-grayscale-min" id="home">
+  <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
+<span class="w3-tag">By: Papaspyrou Alexandros</span> 
+ </div>
+  <div class="w3-display-middle w3-center">
 
-<img class="w3-image" src="https://78.media.tumblr.com/4b620392bb4bef6e318f179af05948f0/tumblr_oz7c9bifSb1si59zfo9_1280.jpg" alt="photo" width="1600" height="800">
+	<span class="w3-text-white w3-hide-small" style="font-size:130px">#Links</span>
+    <span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">#Links</span>
 
-<div class="w3-display-middle w3-center">
-<span class="w3-text-white w3-hide-small" style="font-size:130px">#Links</span>
-<span class="w3-text-white w3-hide-large w3-hide-medium" style="font-size:80px">#Links</span></div>
-
-<div class="w3-display-bottomleft w3-padding-large w3-opacity">
-<span class="w3-tag">By: Papaspyrou Alexandros</span></div>
+  </div>
+  <div class="w3-display-bottomright w3-center w3-padding-large">
+    <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: 1.10.2018</span>
+  </div>
 </header>
 
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
 
+<!-- About Container -->
+<div class="w3-container" id="about">
+  <div class="w3-content" style="max-width:1000px">
+
+ 
+ <!-- Menu Container -->
+<div class="w3-container" id="menu">
+  <div class="w3-content" style="max-width:950px">
+ 
+    <div class="w3-panel w3-leftbar w3-light-grey">
+      <p><i>"The Web without links is like a world without roads."</i></p></div>
+ 
 <br><span class="w3-tag w3-black">EVENTS</span><span class="w3-tag w3-blue">
 <a href="https://jobfestival.gr"> Athens #JobFestival 2018 </a> 
 <!-- 
@@ -302,12 +326,29 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 		<a href="https://pixabay.com/">pixabay</a> |
     <br><span class="w3-red">SPACE</span> 
         <a href="https://m.esa.int/ESA">ESA</a> | 
-        
-        
-<!-- =============================================== -->   
-</div>
+</div></div></div></div></div>
+<!-- End page content -->
+
+<!-- Footer -->
 <!--Footer Section ////////////////////////////////////////////////////////// -->
 <div class="w3-center w3-black w3-padding-16"><i style="font-size:15px" class="fa">&#xf25e;</i> Papaspyrou Alexandros 2018</div>
 <!-- ////////////////////////////////////////////////////////// -->
+<script> // Tabbed Menu
+function openMenu(evt, menuName) {
+  var i, x, tablinks;
+  x = document.getElementsByClassName("menu");
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablink");
+  for (i = 0; i < x.length; i++) {
+     tablinks[i].className = tablinks[i].className.replace(" w3-dark-grey", "");
+  }
+  document.getElementById(menuName).style.display = "block";
+  evt.currentTarget.firstElementChild.className += " w3-dark-grey";
+}
+document.getElementById("myLink").click();
+</script>
+
 </body>
 </html>
