--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@ Welcome in my personal website
     <p>Η ιστοσελίδα μας ενδέχεται να περιλαμβάνει ενσωματωμένο περιεχόμενο, όπως βίντεο, από άλλους ιστότοπους. Το ενσωματωμένο περιεχόμενο συμπεριφέρεται ακριβώς σαν να έχετε επισκεφθεί τον αντίστοιχο ιστότοπο και δεν έχουμε κανέναν έλεγχο ως προς την όποια πολιτική απορρήτου εφαρμόζει ο ιστότοπος αυτός. Εμείς από την πλευρά μας προσπαθούμε να μη χρησιμοποιούμε περιεχόμενο από ιστότοπους αμφίβολης ποιότητας και πρακτικών.</p>
 
 <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ΑΔΕΙΑ ΧΡΗΣΗΣ</span></h5>
-      <p>Εκτός και αν αναφέρεται διαφορετικά, το πρωτότυπο περιεχόμενο του os.arena χορηγείται υπό την κάτωθι άδεια: </p>    
+      <p>Εκτός και αν αναφέρεται διαφορετικά, το πρωτότυπο περιεχόμενο του alexandroshub χορηγείται υπό την κάτωθι άδεια: </p>    
    <div class="w3-panel w3-leftbar w3-light-grey">
       <p><b>Creative Commons – Αναφορά Δημιουργού – Μη Εμπορική Χρήση – Παρόμοια Διανομή 4.0 Διεθνές</b>
       <br><i>Το παρόν είναι μία ευανάγνωστη περίληψη (και όχι υποκατάστατο) της άδειας. <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode" title="CC"><i class="fa fa-external-link"></i></a></i></p>     </div>    
