--- a/index19.html
+++ b/index19.html
@@ -3,7 +3,8 @@
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
 ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
 Welcome in my personal website 100% HTML Hosted by Github
-Handcrafted With ❤ By: Alexandros Papaspyrou
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
+ENJOY THE 2019 VERSION...EARLIER !!! NEW MENU / NEW APPS / NEW CONTENT
 -->
 <!DOCTYPE html>
 <html>
@@ -26,8 +27,9 @@ body, html { height: 100%; line-height: 1.8;}
 .w3-bar .w3-button { padding: 16px;}
 </style>
 <body>
-<!-- =========== Load Facebook SDK for JavaScript =========== -->
-<div id="fb-root"></div> <script>(function(d, s, id) {
+<!--  ////////////////////////// messenger_platform  ////////////////////////// --> <!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
@@ -35,14 +37,21 @@ body, html { height: 100%; line-height: 1.8;}
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <!-- Your customer chat code -->
-<div class="fb-customerchat" attribution=setup_tool   page_id="1610585155641169" theme_color="#A9A9A9" logged_in_greeting="Hi! How can i help you?" logged_out_greeting="Hi! How can i help you?"> </div>
-<!-- ======================================================= -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="1610585155641169"
+  theme_color="#A9A9A9"
+  logged_in_greeting="Hi! How can i help you?"
+  logged_out_greeting="Hi! How can i help you?">
+</div>
+<!--  ////////////////////////// messenger_platform  ////////////////////////// -->
+
 <!--  ////////////////////////// QR  ////////////////////////// -->
-<style> #overlay {   position: fixed;     display: none;   width: 100%;     height: 100%;   top: 0;     left: 0;     right: 0;   bottom: 0;     background-color: rgba(0,0,0,0.9);   z-index: 2;     cursor: pointer;} #text{   position: absolute;    top: 50%;     left: 50%;    font-size: 20px;     color: white;    transform: translate(-50%,-50%);    -ms-transform:()"> -->  <div id="overlay" onclick="off()"><di translate(-50%,-50%);} </style> <!-- <body onload="onv id="text"> <center><h3>tap or scan & download the app</h3>
+<style> #overlay {   position: fixed;     display: none;   width: 100%;     height: 100%;   top: 0;     left: 0;     right: 0;   bottom: 0;     background-color: rgba(0,0,0,0.9);   z-index: 2;     cursor: pointer;} #text{   position: absolute;    top: 50%;     left: 50%;    font-size: 20px;     color: white;    transform: translate(-50%,-50%);    -ms-transform: translate(-50%,-50%);} </style> <!-- <body onload="on()"> -->  <div id="overlay" onclick="off()"><div id="text"> <center><h3>scan & download the app</h3>
 <a href="https://snappy.appypie.com/index/app-download/appId/9a986a9e031f">
 <img src="https://d2wuvg8krwnvon.cloudfront.net/appqrcode/mobile_9a986a9e031f.png" width="50%" height="50%"></a><p>or click anywhere to close this window</p> </center></div></div> <script>function on() {document.getElementById("overlay").style.display = "block";} function off() {document.getElementById("overlay").style.display = "none";}</script>
 <!--  ////////////////////////// QR  ////////////////////////// -->
-<!-- Navbar (sit on top) -->
+<!-- ////////////////////////// Navbar ////////////////////////// -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card w3-opacity-min w3-hover-opacity-off" id="myNavbar">
     <a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-wide">
@@ -61,14 +70,13 @@ body, html { height: 100%; line-height: 1.8;}
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red">Close ×</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">Portfolio</a>
-  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">Links</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">Dashboard</a>
-  <hr>
-  
-  
-  <hr>
+  <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button">Portfolio</a>
+  <a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
+  <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button">Links</a>
+  <a href="https://alexandroshub.github.io/vip.dashboard.html" onclick="w3_close()" class="w3-bar-item w3-button">Dashboard</a>
+	<hr>
+-
+	<hr>
 <a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
 </nav>
 
@@ -301,6 +309,3 @@ Support: 	alexispapy@outlook.com
 Sub: 		papaspyrou.alexandros@gmail.com
 -->
 </html>
-
-
-
