--- a/index19.html
+++ b/index19.html
@@ -1,3 +1,4 @@
+
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -53,7 +54,7 @@ body, html { height: 100%; line-height: 1.8;}
 <!--  ////////////////////////// QR  ////////////////////////// -->
 <!-- ////////////////////////// Navbar ////////////////////////// -->
 <div class="w3-top">
-  <div class="w3-bar w3-white w3-card w3-opacity-min w3-hover-opacity-off" id="myNavbar">
+  <div class="w3-bar w3-gray w3-card w3-opacity-min w3-hover-opacity-off" id="myNavbar">
     <a href="https://alexandroshub.github.io/index.html" class="w3-bar-item w3-button w3-wide">
 <img src="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" style="width:27px;" class="w3-left w3-hover-opacity"> &nbsp; 
 <b> Papaspyrou</b><span class="w3-hide-small w3-hide-medium"> Alexandros</span></a>
@@ -70,14 +71,16 @@ body, html { height: 100%; line-height: 1.8;}
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-red">Close ×</a>
-  <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button">Portfolio</a>
-  <a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()" class="w3-bar-item w3-button">CV</a>
-  <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button">Links</a>
-  <a href="https://alexandroshub.github.io/vip.dashboard.html" onclick="w3_close()" class="w3-bar-item w3-button">Dashboard</a>
-	<hr>
--
+  <a href="https://alexandroshub.github.io/portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-orange"><i class="fa fa-send-o"></i>&nbsp;  Portfolio</a>
+	<a href="https://alexandroshub.github.io/cv.html" onclick="w3_close()"  class="w3-bar-item w3-button"><i class="fa fa-user-o"></i> &nbsp;  CV </a> 
+	<a href="https://robodayblog.wordpress.com/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-green"><i class="fa fa-commenting-o"></i>  &nbsp; Blog</a> 
+    <a href="https://alexandroshub.github.io/links.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-purple"><i class="fa fa-link"></i>  &nbsp; Links</a> 
+    <hr>
+    ENJOY THE 2019 VERSION
 	<hr>
 <a href="https://m.me/papaspyrou.alexandros" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-blue"><i class="fa fa-comments-o"></i> Messenger</a>
+  <a href="https://alexandroshub.github.io/vip.dashboard.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+<a href="https://alexandroshub.github.io/cono" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-pink"><i class="fa fa-connectdevelop fa-fw"></i> CoNo</a>
 </nav>
 
 <!-- Header with full-height image -->
@@ -123,7 +126,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
     <div class="w3-col m6">
       <h3>Coding Time.</h3>
       <p><i>"Aν κάναμε όλα όσα είμαστε ικανοί να κάνουμε, θα εκπλήσσαμε τον εαυτό μας."</i> <br><b>Thomas Edison</b></p>
-      <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
+      <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Coding Projects</a></p>
     </div>
     <div class="w3-col m6">
      <!--    ================ -->
@@ -134,18 +137,16 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
 <br><font color="blue">namespace</font> hello_world {  
 <br><br>std::string <font color="red">hello ()</font>
 <br>{ 
-<br><font color="green">return "Hello, World!"; </font>
+<br>return<font color="green"> "Hello, World!"; </font>
 <br>} 
 <br>}
 </div>
-
-     
-     <!--  ----------------- -->
+<!--  ----------------- -->
     </div>
   </div>
 </div>
 
-<!-- Promo Section "Statistics" -->
+<!-- Section "Statistics" - ->
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter">
     <span class="w3-xxlarge">14+</span>
@@ -164,63 +165,7 @@ if (i < txt.length) {  document.getElementById("demo").innerHTML += txt.charAt(i
     <br>Meetings
   </div>
 </div>
-
-<!-- Work Section -->
-<div class="w3-container" style="padding:60px 16px">
-   <div class="w3-row-padding" style="margin-top:16px">
-    <div class="w3-col l3 m6">
-      <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Το κύκλωμα του Φωτοδιακόπτη">
-
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
-    </div>
-  </div>
-  <center><p><a href="#work" class="w3-button w3-black "><i class="fa fa-th"> </i>More  Projects</a></p></center>
-  </div>
-
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
-
-<!-- Skills Section -->
-<div class="w3-container w3-light-grey w3-padding-64" id="me" >
-  <div class="w3-row-padding">
-    <div class="w3-col m6" >
-      <h3>About Me.</h3>
-      <p>Γεννήθηκα και μεγάλωσα στην Αθήνα και από μικρός κατάλαβα το ενδιαφέρον μου για την επιστήμη, τις τεχνολογίες και την πληροφορική, για αυτό και επέλεξα να σπουδάσω και να ασχοληθώ με αυτό το αντικείμενο, αναζητώντας πάντα νέες ευκαιρίες και πάντα ψάχνοντας για καινοτομία.</p>
-    <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black"><i class="fa fa-user-o"></i> CV</a> <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-blue"><i class="fa fa-linkedin w3-hover-opacity"></i></a></p>
-   
-    </div>
-    <div class="w3-col m6">
-      <p class="w3-wide"><i class="fa fa-laptop w3-margin-right"></i>Projects </p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
-      </div>
-      <p class="w3-wide"><i class="fa fa-code w3-margin-right"></i>Coding</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:85%">85%</div>
-      </div>
-      <p class="w3-wide"><i class="fa fa-gears w3-margin-right"></i>Automations</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
+<!-- end of Section "Statistics" -->
 <!-- MAIN Section //////////////////////////////////////////////////////////-->
 <div class="w3-center w3-dark-grey w3-padding-16">
 	<div class="w3-row-padding">
@@ -262,7 +207,64 @@ Files & Publications</div>
 <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Files" style="width:100%">
 </a></div></div>
 </div>
-</div><!-- ////////////////////////////////////////////////////////// -->
+</div>
+<!-- ////////////////////////////////////////////////////////// -->
+<!-- Work Section -->
+<div class="w3-container" style="padding:60px 16px">
+   <div class="w3-row-padding" style="margin-top:16px">
+    <div class="w3-col l3 m6">
+      <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Το κύκλωμα του Φωτοδιακόπτη">
+
+    </div>
+    <div class="w3-col l3 m6">
+      <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
+    </div>
+    <div class="w3-col l3 m6">
+      <img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
+    </div>
+    <div class="w3-col l3 m6">
+      <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
+    </div>
+  </div>
+  <center><p><a href="#work" class="w3-button w3-black "><i class="fa fa-th"> </i>More  Projects</a></p></center>
+  </div>
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
+
+<!-- Skills Section -->
+<div class="w3-container w3-light-grey w3-padding-64" id="me" >
+  <div class="w3-row-padding">
+    <div class="w3-col m6" >
+      <h3>About Me.</h3>
+      <p>Γεννήθηκα και μεγάλωσα στην Αθήνα και από μικρός κατάλαβα το ενδιαφέρον μου για την επιστήμη, τις τεχνολογίες και την πληροφορική, για αυτό και επέλεξα να σπουδάσω και να ασχοληθώ με αυτό το αντικείμενο, αναζητώντας πάντα νέες ευκαιρίες και πάντα ψάχνοντας για καινοτομία.</p>
+    <p><a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-black"><i class="fa fa-user-o"></i> CV</a> <a href="https://alexandroshub.github.io/cv.html" class="w3-button w3-blue"><i class="fa fa-linkedin w3-hover-opacity"></i></a></p>
+   
+    </div>
+    <div class="w3-col m6">
+      <p class="w3-wide"><i class="fa fa-laptop w3-margin-right"></i>Projects </p>
+      <div class="w3-grey">
+        <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
+      </div>
+      <p class="w3-wide"><i class="fa fa-code w3-margin-right"></i>Coding</p>
+      <div class="w3-grey">
+        <div class="w3-container w3-dark-grey w3-center" style="width:85%">85%</div>
+      </div>
+      <p class="w3-wide"><i class="fa fa-gears w3-margin-right"></i>Automations</p>
+      <div class="w3-grey">
+        <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="w3-center w3-padding-64"><span class="w3-xlarge w3-bottombar w3-border-dark-grey w3-padding-16">Thanks For Watching</span></div>
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
