--- a/links.html
+++ b/links.html
@@ -1,5 +1,3 @@
-
-
 <!--
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
 ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -110,7 +108,7 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">Ημερομηνία τελευταίας τροποποίησης: 1.10.2018</span>
+    <span class="w3-text-white"></span>
   </div>
 </header>
 
@@ -130,11 +128,10 @@ function w3_close() {mySidebar.style.display = "none";} </script>
       <p><i>"The Web without links is like a world without roads."</i></p></div>
  
 <br><span class="w3-tag w3-black">EVENTS</span><span class="w3-tag w3-blue">
+<!--
 <a href="https://jobfestival.gr"> Athens #JobFestival 2018 </a> 
-<!-- 
 <a href=" https://www.e-businessworld.gr ">e-Business & Social Media World 2018</a> 
  -->
-
 </span><br>  
 		<a href="http://www.sev.org.gr">sev</a> | 
 		<a href="https://www.meetup.com">meetup</a> | 
@@ -194,6 +191,7 @@ function w3_close() {mySidebar.style.display = "none";} </script>
         <a href="https://www.protothema.gr/technology/">protothema</a> | 
         <a href="http://www.iefimerida.gr/τεχνολογία">iefimerida</a>  |
         <a href="http://www.in.gr/tech/">in</a>  |
+         <a href="http://www.ana.gr/home/18/Epistimi">ana</a>  |
   	<br><span class="w3-red"> BLOGS </span>
 		<a href="http://www.infocom.gr/"> infocom</a>  | 
         <a href="http://www.insomnia.gr/"> Insomnia</a>  |  
@@ -266,6 +264,8 @@ function w3_close() {mySidebar.style.display = "none";} </script>
         <a href="https://www.sublimetext.com/">sublimetext</a>  |  
 		<a href="https://notepad-plus-plus.org/download/">notepad++</a>  |  
 		<a href="https://www.wps.com">wps</a>  |  
+    <br><span class="w3-red">eMail</span>
+		<a href="https://www.gmx.com/">gmx</a>  |  
     <br><span class="w3-red">WEB</span>
         <a href="https://www.webnode.gr/">webnode</a>| 
         <a href="https://www.yola.com">Yola</a>| 
@@ -298,6 +298,9 @@ function w3_close() {mySidebar.style.display = "none";} </script>
     
 <br><span class="w3-tag w3-green">PUAS</span><br> 
 		<a href="http://auto.teipir.gr/">auto</a>  |  
+        <a href="http://www.teipir.gr/index.php/el/">teipir</a>  |  
+        <a href="http://www.idpe.uniwa.gr">idpe</a>  |  
+        <a href="http://www.uniwa.gr/">uniwa</a>  |  
 		<a href="http://lib.puas.gr/">lib</a>  |  
 		<a href="http://www.teipir.gr/mke/">mke</a>  |   
 		<a href="http://gdias.teipir.gr/">gdias</a>  |   
@@ -326,6 +329,8 @@ function w3_close() {mySidebar.style.display = "none";} </script>
 		<a href="https://pixabay.com/">pixabay</a> |
     <br><span class="w3-red">SPACE</span> 
         <a href="https://m.esa.int/ESA">ESA</a> | 
+    <br><span class="w3-red">FRIENDS</span> 
+        <a href="https://ekrestart.wordpress.com/">ekrestart</a> | 
 </div></div></div></div></div>
 <!-- End page content -->
 
